<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestAutomationClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 主界面 -->
    <string name="html">生成报告</string>
    <string name="start">开始测试</string>
    <string name="Itemicon">图标</string>
    <string name="Itemtext">文字</string>
    
    <!-- 关于手机 -->
    <string name="information">关于手机</string>
    <string name="phonemodel">手机型号:</string>
    <string name="release">系统版本:</string>
    <string name="serialno">SN号:</string>
    <string name="imei">IMEI号:</string>
    <string name="sdk">SDK版本号:</string>
    <string name="resolution">分辨率:</string>
    
    <!-- 数据操作 -->
    <string name="dataoperator">数据操作</string>
    <string name="deletekey">一键清除</string>
    <string name="callog">通话记录</string>
    <string name="contact">联系人</string>
    <string name="one">单条</string>
    <string name="list">多条</string>
    <string name="delete">清除所有记录</string>
    <string name="message">短信</string>
    <string name="msmnum">来信号码:</string>
    <string name="msmcon">信息内容:</string>
    <string name="msmdeltail">新信息</string>
    <string name="msmcount">数量:</string> 
    <string name="ctname">姓名:</string>
    <string name="number">号码:</string>
    <string name="clnum">数量:</string>
    <string name="cltype">呼叫类型:</string>
    <string name="ctnum">数量:</string>
    <string name="defaultnums">1</string>
    
    <!-- wifi监听 -->
    <string name="wifiMonitor">wifi监听</string>
    <string name="tochoosewifi">请选择所要监听的wifi:</string>
    <string name="password">密码:</string>
    <string name="starttomonite">开始监听</string>
    
    <!-- 调试 -->
    <string name="debugcase">调试</string>
    <string name="type">类型：</string>
    <string name="module">模块：</string>
    <string name="step">步骤：</string>
    <string name="inputtype">点击选择案例类型</string>
    <string name="inputmodule">点击选择案例模块</string>
    <string name="inputstep">点击选择执行步骤</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    
    <!-- 添加更多 -->
    <string name="more">添加更多</string>
    <string name="getacticity">进入界面：</string>
    <string name="sureactivity">确认选择该界面</string>
    <string name="morestep">操作步骤：</string>
    <string name="addstep">添加操作步骤</string>
    <string name="expectedresult">预期结果：</string>
    <string name="setexpectedresult">设置预期结果</string>
    <string name="moretimes">执行次数：</string>
    
    <!-- 颜色 -->
    <color name="transparent">#55ff</color>
    <color name="White">#ffffff</color>
    <color name="Black">#303030</color>
    <color name="orange">#FFDAB9</color>
    <color name="LightPink">#FFB6C1</color>
    <color name="LightBlue">#B0E0E6</color>
    <color name="LightPurple">#E6E6FA</color>
    <color name="LightGreen">#C1FFC1</color>
    <color name="deepGreen">#528B8B</color>
    <color name="Brown">#8B5F65</color>
    <color name="darkseagreen">#20B2AA</color>
    <color name="cadetblue">#4F94CD</color>
    <color name="mediumseagreen">#3CB371</color>
    <color name="line">#708090</color>
    <color name="dialog">#00688B</color>

</resources>