<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/actions_comment"
        android:text="@string/information"
        android:textSize="@dimen/bigtitle" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding"
        android:orientation="vertical">
        
        <TextView
        android:id="@+id/phonemodel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonemodel"
        android:textSize="@dimen/information_font"
        android:textColor="@color/LightPink" />
        
        <TextView
        android:id="@+id/serialno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serialno"
        android:textSize="@dimen/information_font"
        android:textColor="@color/LightPink" />
        
        <TextView
        android:id="@+id/imei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imei"
        android:textSize="@dimen/information_font"
        android:textColor="@color/LightPink" />
        
        <TextView
        android:id="@+id/release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release"
        android:textSize="@dimen/information_font"
        android:textColor="@color/LightPink" />
         
        <TextView
        android:id="@+id/sdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk"
        android:textSize="@dimen/information_font"
        android:textColor="@color/LightPink" />
        
        <TextView
        android:id="@+id/resolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resolution"
        android:textSize="@dimen/information_font"
        android:textColor="@color/LightPink" />
        
    </LinearLayout>

</LinearLayout>