<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/actions_about"
        android:gravity="center_vertical"
        android:text="@string/debugcase"
        android:textSize="@dimen/bigtitle" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_type"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/LightPink"
                android:textSize="@dimen/information_font" />

            <TextView
                android:id="@+id/txt_showtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inputtype"
                android:textSize="@dimen/information_font" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_module"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/module"
                android:textColor="@color/LightPink"
                android:textSize="@dimen/information_font" />

            <TextView
                android:id="@+id/txt_showmodule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inputmodule"
                android:textSize="@dimen/information_font" />

        </LinearLayout>

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_step"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/step"
                android:textColor="@color/LightPink"
                android:textSize="@dimen/information_font" />

            <TextView
                android:id="@+id/txt_showstep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inputstep"
                android:lines="4"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:scrollbarStyle="insideInset"
                android:textSize="@dimen/information_font" />
                            

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal" >
            
            <Button
            android:id="@+id/dbtc_sure"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:text="@string/sure"
            android:textColor="@color/White"
            android:textSize="20sp" 
            style="?android:attr/buttonBarButtonStyle"/>
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>