<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="@dimen/dialog_height"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/dataoperator"
            android:textSize="@dimen/bigtitle"
            android:drawableLeft="@drawable/actions_data"/>
        <ImageView 
            android:id="@+id/deletekey"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:contentDescription="@string/deletekey"
            android:src="@drawable/delete"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@color/orange"
        android:orientation="horizontal" > 

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/Brown"
            android:text="@string/contact" />

        <TextView
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/message" />

        <TextView
            android:id="@+id/calllog"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/callog" />

        
    </LinearLayout>
    
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </android.support.v4.view.ViewPager>

</LinearLayout>
