<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/LightPink"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingRight="50dp"
        android:paddingTop="50dp" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/number" />

        <EditText
            android:id="@+id/clphone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/LightPink" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingRight="50dp" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/cltype" />

        <Spinner
            android:id="@+id/typespinner"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@color/White" />
    </LinearLayout>
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingRight="50dp" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/clnum" />

        <EditText
            android:id="@+id/clnums"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/defaultnums"
            android:textColor="@color/LightPink" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="40dp" >

        <Button
            android:id="@+id/clsure"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:background="@color/White"
            android:text="@string/sure"
            android:textColor="@color/LightPink"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cllist"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:background="@color/White"
            android:text="@string/list"
            android:textColor="@color/LightPink"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cldelete"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:background="@color/White"
            android:text="@string/delete"
            android:textColor="@color/LightPink"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>