<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/actions_cent"
        android:gravity="center_vertical"
        android:text="@string/wifiMonitor"
        android:textSize="@dimen/bigtitle" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/tochoosewifi"
            android:textSize="@dimen/information_font" />

        <Spinner
            android:id="@+id/SSIDspinner"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxLines="2"
            android:text="@string/password"
            android:textSize="@dimen/information_font" />     

        <EditText
            android:id="@+id/SSIDpassword"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/wifisure"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:background="@drawable/radius_button"
        android:textColor="@color/dialog"
        android:text="@string/starttomonite" />

</LinearLayout>